--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
     <main>
       <!--Section effective_solution_for_your_business-->
-      <section class="section-main">
-        <h1 class="main-header">Эффективные решения для вашего бизнеса</h1>
-        <button class="main-btn" type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="hero-btn" type="button">Заказать услугу</button>
       </section>
       <!--Section features-->
       <section class="section-features">
@@ -170,7 +170,7 @@
         <ul class="footer-list list">
           <li class="footer-item">
             <a
-              class="footer-link location link"
+              class="footer-link-location link"
               href="https://goo.gl/maps/vdUjSE2Tv6SdJSwDA"
               target="_blank"
               rel="noopener noreferrer"
@@ -178,10 +178,10 @@
             </a>
           </li>
           <li class="footer-item">
-            <a class="footer-link-mail link" href="mailto:info@example.com">info@example.com</a>
+            <a class="footer-link link" href="mailto:info@example.com">info@example.com</a>
           </li>
           <li class="footer-item">
-            <a class="footer-link-phone link" href="tel:+380991111111">+38 099 111 11 11</a>
+            <a class="footer-link link" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
