--- a/portfolio.html
+++ b/portfolio.html
@@ -155,7 +155,7 @@
         <ul class="footer-list list">
           <li class="footer-item">
             <a
-              class="footer-link location link"
+              class="footer-link-location link"
               href="https://goo.gl/maps/vdUjSE2Tv6SdJSwDA"
               target="_blank"
               rel="noopener noreferrer"
@@ -163,10 +163,10 @@
             </a>
           </li>
           <li class="footer-item">
-            <a class="footer-link-mail link" href="mailto:info@example.com">info@example.com</a>
+            <a class="footer-link link" href="mailto:info@example.com">info@example.com</a>
           </li>
           <li class="footer-item">
-            <a class="footer-link-phone link" href="tel:+380991111111">+38 099 111 11 11</a>
+            <a class="footer-link link" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
