--- a/portfolio.html
+++ b/portfolio.html
@@ -62,85 +62,112 @@
         <!-- CONTENT -->
         <ul class="content-list list">
           <li class="content-item">
-            <img
+            <a href="">
+              <img
               class="content-img"
               src="./images/./portfolio_img/technokriak_1.jpg"
               alt="Фото веб-сайта технокряк"
             />
             <h2 class="content-title">Технокряк</h2>
+            <p class="content-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda excepturi nihil</p>
             <p class="content-text">Веб-сайт</p>
+            </a>
           </li>
           <li class="content-item">
-            <img
+            <a href="">
+              <img
               class="content-img"
               src="./images/./portfolio_img/poster_new_oll_2.jpg"
               alt="Постер New Orlean vs Golden Sta"
             />
             <h2 class="content-title">Постер New Orlean vs Golden Star</h2>
+            <p class="content-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda excepturi nihil</p>
             <p class="content-text">Дизайн</p>
+            </a>
           </li>
           <li class="content-item">
-            <img
+            <a href="">
+              <img
               class="content-img"
               src="./images/./portfolio_img/seafood_3.jpg"
               alt="Ресторан Seafood"
             />
             <h2 class="content-title">Ресторан Seafood</h2>
+            <p class="content-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda excepturi nihil</p>
             <p class="content-text">Приложение</p>
+            </a>
           </li>
           <li class="content-item">
-            <img
+            <a href="">
+              <img
               class="content-img"
               src="./images/./portfolio_img/prime_4.jpg"
               alt="Фотография наушников"
             />
             <h2 class="content-title">Проект Prime</h2>
+            <p class="content-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda excepturi nihil</p>
             <p class="content-text">Маркетинг</p>
+            </a>
           </li>
           <li class="content-item">
-            <img
+            <a href="">
+              <img
               class="content-img"
               src="./images/./portfolio_img/boxes_5.jpg"
               alt="Фото коробок с надписями"
             />
             <h2 class="content-title">Проект Boxes</h2>
+            <p class="content-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda excepturi nihil</p>
             <p class="content-text">Приложение</p>
+            </a>
           </li>
           <li class="content-item">
-            <img
+            <a href="">
+              <img
               class="content-img"
               src="./images/./portfolio_img/no_borders_6.jpg"
               alt="Фото монитора"
             />
             <h2 class="content-title">Inspiration has no Borders</h2>
+            <p class="content-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda excepturi nihil</p>
             <p class="content-text">Веб-сайт</p>
+            </a>
           </li>
           <li class="content-item">
-            <img
+            <a href="">
+              <img
               class="content-img"
               src="./images/./portfolio_img/limied_editon7.jpg"
               alt="Фото открытой книги"
             />
             <h2 class="content-title">Издание Limited Edition</h2>
+            <p class="content-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda excepturi nihil</p>
             <p class="content-text">Дизайн</p>
+            </a>
           </li>
           <li class="content-item">
-            <img
+            <a href="">
+              <img
               class="content-img"
               src="./images/./portfolio_img/lab_8.jpg"
               alt="Фотография этикетки"
             />
             <h2 class="content-title">Проект LAB</h2>
+            <p class="content-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda excepturi nihil</p>
             <p class="content-text">Маркетинг</p>
+            </a>
           </li>
           <li class="content-item">
-            <img
+            <a href="">
+              <img
               class="content-img"
               src="./images/./portfolio_img/grow_bisn_9.jpg"
               alt="Фото открытого планшета"
             />
             <h2 class="content-title">Growing Business</h2>
+            <p class="content-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda excepturi nihil</p>
             <p class="content-text">Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
